[tool.poetry]
name = "bbprop"
version = "0.1.0"
description = "BBProp library."
authors = ["Jeremy Morrison <jeremy.morrison36@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.20.2"
scipy = "^1.6.2"
requests = "^2.25.1"
pandas = "^1.2.3"
boto3 = "^1.17.41"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
flake8 = "^3.9.0"
pytest-lazy-fixture = "^0.6.3"
python-dotenv = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
